# CMake-learning

_001_002_hellocmake/: CMakeLists.txt  course.md  hellocmake.cpp
_003_004_hellolibrary/: CMakeLists.txt  hellolibrary.cpp  hellolibrary.h  main.cpp  note.md
_005_SubDirectory/: CMakeLists.txt  note.md
_005_SubDirectory/src/: CMakeLists.txt  main.cpp
_006_OutputPath/: CMakeLists.txt  note.md
_006_OutputPath/src/: CMakeLists.txt  main.cpp  sayhello.cpp  sayhello.h
_007_CustomizeInstall/: CMakeLists.txt  note.txt  ops.md  run_customize_install.sh
_007_CustomizeInstall/src/: CMakeLists.txt  main.cpp
_008_LibraryProperty/: CMakeLists.txt  note.txt  ops.md
_008_LibraryProperty/src/: CMakeLists.txt  linear.cpp  linear.h
_009_ExternalLibrary/: CMakeLists.txt  manual.md
_009_ExternalLibrary/src/: CMakeLists.txt  main.cpp
_010_HostSystemInfo/: CMakeLists.txt
_010_HostSystemInfo/src/: CMakeLists.txt  main.cpp
_011_MinimumRequired/: CMakeLists.txt  note.txt
_012_Policy/: CMakeLists.txt  note.txt
_013_ConfigureFile/: CMakeLists.txt  input.h  note.txt
